# synqronix

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_models.ipynb  run_models.py  train_workflow.yaml
results/evaluation/: detailed_results.csv  metrics.csv  tuning_height_w=50.csv  tuning_width_h=100.csv
results/evaluation_qgcn/: detailed_results_qgcn.csv  metrics_qgcn.csv
src/synqronix/: __init__.py  config.py  evaluation.py  example.ipynb  main.py  trainer.py  utils.py  visualization.py
src/synqronix/dataproc/: dataloader.py  graph_dataloader.py  utils.py
src/synqronix/models/: gnn.py  qgcn.py  qgcn_node_embedding.py
src/synqronix/results/checkpoints/: best_model.pth  checkpoint_epoch_4.pth  checkpoint_epoch_6.pth  checkpoint_epoch_7.pth  checkpoint_epoch_8.pth  checkpoint_epoch_9.pth
